--- a/texts/templates/texts/add_text_couple.html
+++ b/texts/templates/texts/add_text_couple.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends "texts/base.html" %}
+
+{% block content %}
 <form action="" method="post">
     <table>
         {% csrf_token %}
@@ -12,5 +8,4 @@
     </table>
     <input type="submit" value="Submit">
 </form>
-</body>
-</html>
+{% endblock %}
