Added new tests,  changed view and template list_text_couples

--- a/texts/templates/list_text_couples.html
+++ b/texts/templates/list_text_couples.html
@@ -2,6 +2,7 @@
 
 
 {% block content %}
+    {% if text_couples %}
     <table width="200" border="0">
         <tbody>
         {% for text_couple in  text_couples  %}
@@ -12,6 +13,8 @@
         {% endfor %}
         </tbody>
     </table>
-    <p>{{ content }}</p>
+    {% else %}
+    <p>No text couples were created yet.</p>
+    {% endif %}
     <a href="/texts/add_text_couple/">Add text couple</a>
 {% endblock %}
