Change implementation so all tests now passes.

--- a/texts/templates/list_text_couples.html
+++ b/texts/templates/list_text_couples.html
@@ -9,6 +9,8 @@
             <tr>
                 <td>{{ text_couple.short }}</td>
                 <td>{{ text_couple.long }}</td>
+                <td><a href="{% url 'texts:view_text_couple' text_couple.pk %}">{{ text_couple.short }} {{
+                    text_couple.long }}</a></td>
             </tr>
         {% endfor %}
         </tbody>
