--- a/texts/templates/texts/base.html
+++ b/texts/templates/texts/base.html
@@ -3,6 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Text couple</title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static "style.css"%}">
 </head>
 <body>
     {% block content %}
