Added application "moderation",  link  on created request for moderation, view for send   to moderation

--- a/texts/templates/texts/view_text_couple.html
+++ b/texts/templates/texts/view_text_couple.html
@@ -5,4 +5,5 @@
 <p>{{ text_couple.short }} {{ text_couple.long }}</p>
 <a href="{% url 'texts:del_text_couple' text_couple.pk %}">Delete text couple</a>
 <a href="{% url 'texts:change_text_couple' text_couple.pk %}">Change text couple</a>
+<a href="{% url 'texts:send_to_moderation' text_couple.pk %}">Send to moderation</a>
 {% endblock %}
