Added moderation and tests

--- a/texts/templates/texts/list_text_couples.html
+++ b/texts/templates/texts/list_text_couples.html
@@ -10,7 +10,7 @@
         <td>{{ text_couple.short }}</td>
         <td>{{ text_couple.long }}</td>
         <td>
-            <a href="{% url 'texts:view_text_couple' text_couple.pk %}">{{ text_couple.short }} {{text_couple.long}}</a>
+            <a href="{% url 'texts:view_text_couple' text_couple.pk %}">Editing</a>
         </td>
     </tr>
     {% endfor %}
