Added app audio_advertising, changed error in tests

--- a/test_advertisement/templates/test_advertisement/index.html
+++ b/test_advertisement/templates/test_advertisement/index.html
@@ -15,6 +15,9 @@
         <td><a href="{% url 'moderation:list_request_for_moderation' %}">List request for moderation</a></td>
      </tr>
     <tr>
+        <td><a href="{% url 'audio_advertising:list_audio_advertising' %}">List audio advertising</a></td>
+    </tr>
+    <tr>
         <td><a href="{% url 'admin:login' %}">Login</a></td>
     </tr>
 </table>
